optimization of scheduled data load